--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-index.html
+<form action="file/upload" method="post" enctype="multipart/form-data">
+    <input name="file" type="file" multiple>
+    <input type="submit" value="提交">
+</form>
 </body>
 </html>
