--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,10 +4,26 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
+<link rel="stylesheet" href="/js/flyui/css/flyui.css">
+<script src="/js/plugins/jquery-1.8.3.min.js" type="text/javascript"></script>
+<script src="/js/flyui/js/flyui-0.6.2.js" type="text/javascript"></script>
+<script src="/js/index.js" type="text/javascript"></script>
 <body>
-<form action="file/upload" method="post" enctype="multipart/form-data">
-    <input name="file" type="file" multiple>
-    <input type="submit" value="提交">
+
+
+<form data-fly-form id="form_demo" class="fix" method="post" action="">
+    <div data-fly-form-element
+         data-fly-options="{name: 'iblur', title: 'onBlur事件', width:'1/3', required: true, type: 'text',valid: {min:5,max:10}}">
+    </div>
+    <div data-fly-form-element
+         data-fly-options="{name: 'ichangge', title: 'onChange事件',
+     width:'1/2',required: true, type: 'text'}}">
+    </div>
+    <div data-fly-form-element
+         data-fly-options="{name: 'iempty', title: 'onEmpty事件',
+     width:'1/2',required: true, type: 'text'}}">
+    </div>
 </form>
+
 </body>
 </html>
