--- a/src/main/resources/static/css/public.css
+++ b/src/main/resources/static/css/public.css
@@ -593,3 +593,4 @@ i.more_c{color:#d8d8d9;font-size:0.8rem;}
   font-size: 0.8rem;
   border-radius: 0.5rem;
 }
+.bg_faedda{background:#faedda url(/images/bg.jpg) center center no-repeat;background-size: 100% 100%;background-attachment: fixed;background-size: cover;}
