--- a/src/main/resources/static/css/public.css
+++ b/src/main/resources/static/css/public.css
@@ -594,3 +594,16 @@ i.more_c{color:#d8d8d9;font-size:0.8rem;}
   border-radius: 0.5rem;
 }
 .bg_faedda{background:#faedda url(/images/bg.jpg) center center no-repeat;background-size: 100% 100%;background-attachment: fixed;background-size: cover;}
+
+.share{
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background:#333333 url(../img/share.png) center center no-repeat;background-size: 100%;background-attachment: fixed;
+}
+
+.tj_top_pic{
+  font-size: 0.7rem;
+}
