--- a/src/main/resources/templates/view/editor.html
+++ b/src/main/resources/templates/view/editor.html
@@ -4,11 +4,10 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0" />
-	<meta name="description" content= "你借我贷是专为急需用钱的人打造而来，只需你实名认证就可以成为我们的会员，享受超低   利息借贷服务，你可以利用本款软件极速借款无需任何抵押担保！">
 	<link rel="shortcut icon" href="/images/njwd-favicon.ico" />
 	<link rel="stylesheet" href="/css/public.css">
 	<link rel="stylesheet" href="/css/layer.css">
-	<title>你借我贷是专为急需用钱的人打造而来，只需你实名认证就可以成为我们的会员，享受超低 利息借贷服务，你可以利用本款软件极速借款无需任何抵押担保！</title>
+	<title>欢迎您</title>
 </head>
 
 <body class="b_color">
