--- a/src/main/resources/templates/view/index.html
+++ b/src/main/resources/templates/view/index.html
@@ -3,12 +3,11 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0" />
-		<meta name="description" content="你借我贷是专为急需用钱的人打造而来，只需你实名认证就可以成为我们的会员，享受超低   利息借贷服务，你可以利用本款软件极速借款无需任何抵押担保！">
 		<link rel="shortcut icon" href="/images/njwd-favicon.ico" />
 		<link rel="stylesheet" href="/css/public.css" />
 		<link href="/css/swiper.min.css" rel="stylesheet" type="text/css" />
 		<link href="/css/layer.css" rel="stylesheet" type="text/css" />
-		<title>你借我贷是专为急需用钱的人打造而来，只需你实名认证就可以成为我们的会员，享受超低   利息借贷服务，你可以利用本款软件极速借款无需任何抵押担保！</title>
+		<title>欢迎您</title>
 	</head>
 	<body class="bg_faedda">
 		<div class="bbi_banane"><img src="/images/1.png"/></div>
@@ -34,11 +33,13 @@
 				</div>
 			</div>
 		</div>
+		<div class="share" id="JweixinTip"></div>
 	</body>
 	<script type="text/javascript" src="/js/view/jquery-1.8.3.min.js"></script>
 	<script type="text/javascript" src="/js/view/layer.js"></script>
 	<script>
 		$(function(){
+            weixinTip();
 		  $('.tj_hb').click(function(){
 			  $('.bg-pup').fadeIn();
 		  });
@@ -51,6 +52,17 @@
 			$('.bg-pup').fadeOut();
 		  })
         });
+
+        function weixinTip() {
+            var ua = navigator.userAgent;
+            var isWeixin = !!/MicroMessenger/i.test(ua);
+            if (isWeixin) {
+                window.event ? window.event.returnValue = false : e.preventDefault();
+                $('#JweixinTip').show();
+            }else{
+                $('#JweixinTip').hide();
+            }
+        };
 	</script>
 
 </html>
