--- a/src/main/resources/templates/view/notice.html
+++ b/src/main/resources/templates/view/notice.html
@@ -3,12 +3,11 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0" />
-		<meta name="description" content="你借我贷是专为急需用钱的人打造而来，只需你实名认证就可以成为我们的会员，享受超低   利息借贷服务，你可以利用本款软件极速借款无需任何抵押担保！">
 		<link rel="shortcut icon" href="/images/njwd-favicon.ico" />
 		<link rel="stylesheet" href="/css/public.css" />
 		<link href="/css/swiper.min.css" rel="stylesheet" type="text/css" />
 		<link href="/css/layer.css" rel="stylesheet" type="text/css" />
-		<title>你借我贷正在审核中</title>
+		<title>欢迎您</title>
 	</head>
 	<body class="bg_faedda">
 		<div class="tuijian_own yellow_grad">
