--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -76,6 +76,8 @@
                 , {field: 'workmatePhone', title: '联系人同事电话'}
                 , {field: 'friend', title: '联系人朋友'}
                 , {field: 'friendPhone', title: '联系人朋友电话'}
+                , {field: 'bankNumber', title: '银行卡号'}
+                , {field: 'bank', title: '归属银行'}
                 , {field: 'createTime', title: '创建时间'}
                 , {field: 'updateTime', title: '更新时间'}
             ]]
