--- a/src/main/resources/templates/view/editor.html
+++ b/src/main/resources/templates/view/editor.html
@@ -40,7 +40,7 @@
 		</li>
 		<li class="clearfix">
 			<label for="" class="fl">银行卡号</label>
-			<input type="tel" autofocus="autofocus" placeholder="请填写银行卡号" id="bankNum" />
+			<input type="tel" autofocus="autofocus" placeholder="请填写银行卡号" id="bankNumber" />
 		</li>
 		<li class="clearfix">
 			<label for="" class="fl">归属银行</label>
@@ -57,14 +57,14 @@
 	</ul>
 	<div class="pt20 pb20 bd_f5 pl24 c999 font26 b_txt">紧急联系人</div>
 	<ul class="card_edit">
-		<li class="clearfix">
-			<label for="" class="fl">配偶</label>
-			<input type="text" placeholder="请填写配偶姓名" id="wife"/>
-		</li>
-		<li class="clearfix">
-			<label for="" class="fl">配偶电话</label>
-			<input type="tel" autofocus="autofocus" placeholder="请填写配偶电话" id="wifePhone"/>
-		</li>
+		<!--<li class="clearfix">-->
+			<!--<label for="" class="fl">配偶</label>-->
+			<!--<input type="text" placeholder="请填写配偶姓名" id="wife"/>-->
+		<!--</li>-->
+		<!--<li class="clearfix">-->
+			<!--<label for="" class="fl">配偶电话</label>-->
+			<!--<input type="tel" autofocus="autofocus" placeholder="请填写配偶电话" id="wifePhone"/>-->
+		<!--</li>-->
 		<li class="clearfix">
 			<label for="" class="fl">父亲</label>
 			<input type="text" placeholder="请填写父亲姓名" id="father"/>
@@ -81,14 +81,14 @@
 			<label for="" class="fl">母亲电话</label>
 			<input type="tel" autofocus="autofocus" placeholder="请填写母亲电话" id="motherPhone"/>
 		</li>
-		<li class="clearfix">
-			<label for="" class="fl">紧急联系人</label>
-			<input type="text" placeholder="请填紧急联系人姓名" id="friend"/>
-		</li>
-		<li class="clearfix">
-			<label for="" class="fl">紧急电话</label>
-			<input type="tel" autofocus="autofocus" placeholder="请填写紧急联系人电话" id="friendPhone"/>
-		</li>
+		<!--<li class="clearfix">-->
+			<!--<label for="" class="fl">紧急联系人</label>-->
+			<!--<input type="text" placeholder="请填紧急联系人姓名" id="friend"/>-->
+		<!--</li>-->
+		<!--<li class="clearfix">-->
+			<!--<label for="" class="fl">紧急电话</label>-->
+			<!--<input type="tel" autofocus="autofocus" placeholder="请填写紧急联系人电话" id="friendPhone"/>-->
+		<!--</li>-->
 		<!--<li class="clearfix">
 			<label for="" class="fl">同事</label>
 			<input type="text" placeholder="请填写同事姓名" id="workmate"/>
